# rSnake

./: .gitignore  Cargo.toml  PROFILING.md  agent.go  agent_pool.go  config.example.toml  config.toml  game.go  go.mod  go.sum  index.html  main.go  profile.sh  renderer.go  sensors.go  snake_brain.json  snake_history.json  snake_stats.json  stats.go  training.go  training_manager.go  training_session.json  utils.go
.tmp/sessions/2026-02-16-snake-stats-refactor/: context.md
ai/: qlearning.go
data/: dqn_weights.gob
game/: game.go
game/entity/: snake.go
game/manager/: collision_manager.go  food_manager.go  population_manager.go  reproduction_manager.go  state_manager.go
game/types/: types.go
qlearning/: dqn.go  qlearning.go
runs/019c8cb3-0775-7120-8184-d41a51339d5c/sessions/: 019c8e6a-62b3-7260-8a62-a5690a892ce8.json  019c8e6d-6623-7d33-b816-a503ff9e5158.json  019c8f7c-e68d-70b2-8276-04a29dea54c9.json  019c8ff4-710e-7fe3-bb75-9501b5a2164b.json  019c904f-d8dc-73e3-98d0-96234515cbee.json  019c907a-83a1-7680-9591-d0df8f7de302.json  019c9163-1edc-7cb2-a7f4-01dd5a640e1a.json  019c91c0-1ff7-7942-bb63-bfb6eb4912cf.json
runs/1537e783-7234-4c83-9fc2-1bb4b234390a/: brain.json
runs/1537e783-7234-4c83-9fc2-1bb4b234390a/sessions/: 2026-02-17-003725.json  2026-02-17-004006.json  2026-02-17-005733.json  2026-02-17-010704.json  2026-02-17-011303.json  2026-02-17-012205.json  2026-02-17-013715.json  2026-02-17-015140.json  2026-02-17-091426.json
src/: agent.rs  brain.rs  buffer.rs  config.rs  evolution.rs  main.rs  map_elites.rs  model.rs  profiling.rs  snake.rs  terrain.rs  types.rs  ui.rs
src/brain_inspector/: gizmos.rs  loader.rs  mod.rs  ui.rs
ui/: renderer.go
