[package]
name = "snake-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13"

# NOTA: rimosso default-features = false — era la causa di tutti gli errori.
# Disabilitava std, train, record e altri moduli interni necessari per optim/recorder.
# Le feature "ndarray" + "autodiff" si affiancano ai default (std, train, ecc.)
burn = { version = "0.16", features = ["wgpu", "autodiff"] }

rand = "0.8"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
chrono = "0.4"
uuid = { version = "1.8", features = ["v4"] }

# Profiling (opzionale)
pprof = { version = "0.13", features = ["flamegraph", "protobuf-codec"], optional = true }

[features]
default = []
profiling = ["pprof"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16

[profile.profiling]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 16
debug = true
