[package]
name = "snake-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
chrono = "0.4"
uuid = { version = "1.8", features = ["v4"] }
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"

# Profiling (opzionale)
pprof = { version = "0.13", features = ["flamegraph", "protobuf-codec"], optional = true }

[features]
default = []
profiling = ["pprof"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16

[profile.profiling]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 16
debug = true
